# pypoetry

./: .gitignore  README.md  build.py  pyproject.toml
src/pypoetry/: cli.py
src/pypoetry/c_ext/: __init__.py  cmodule.c
src/pypoetry/c_ext/cmodule/: __init__.py
src/pypoetry/c_ext/cmodulea/: __init__.py  cmodulea.c
src/pypoetry/c_ext/cmoduleb/: __init__.py  cmoduleb.c
src/pypoetry/cyth/: hello_world.pyx  worker.pyx
