[tool.poetry]
name = "pypoetry"
version = "0.1.0"
description = "A sample project driven by poetry, using Cython"
authors = ["Ivan Cenov <i_cenov@botevgrad.com>"]
readme = "README.md"
packages = [{include = "pypoetry", from = "src"}]
include = ["src/pypoetry/cyth/*.so", "src/pypoetry/cyth/*.pyd"]  # Compiled extensions

[tool.poetry.dependencies]
python = ">=3.12"
cython = ">=3.0"
setuptools = ">=68.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.0"
pytest-cov = ">=3.0.0"
pytest-mock = ">=3.0.0"

[tool.poetry.scripts]
pypoetry = "pypoetry.cli:main"

[build-system]
requires = ["poetry-core", "setuptools", "Cython"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
generate-setup-file = true
script = 'build.py'
